--- a/styles2.css
+++ b/styles2.css
@@ -188,6 +188,11 @@ footer {
     margin-top: 10%;
 }
 
+.footerCarrito{
+    position: sticky;
+}
+
+
 @media screen and (min-width:768px){
 
     .image{
